[package]
name = "pallet-validated-streams"
version = "0.1.0"
description = "validated-streams"
edition = "2021"
repository = "https://github.com/comrade-coop/validated-streams"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git ="https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v0.9.42" }
frame-support = { version = "4.0.0-dev", default-features = false, git ="https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", default-features = false, git ="https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

sp-std = { version = "5.0.0", default-features = false, git ="https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git",default-features= false, branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.42" }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git",default-features= false, branch = "polkadot-v0.9.42" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", default-features =false , branch = "polkadot-v0.9.42" }


[dev-dependencies]
sp-keystore = { version = "0.13.0-dev", git = "https://github.com/paritytech/substrate.git", branch="polkadot-v0.9.42" }
sc-keystore = { version = "4.0.0-dev", default-features = false, git ="https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git ="https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
[features]
default = ["std"]
std = ["codec/std", "frame-benchmarking/std", "frame-support/std", "frame-system/std", "scale-info/std"]
on-chain-proofs=[]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
