[package]
name = "tps_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.1.3"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
tonic = { version ="0.8", features = ["transport"] }
prost = "0.11"
sha2 = "0.10.6"
log = "0.4.18"

[build-dependencies]
tonic-build = "0.8"
